@@ -26,6 +26,7 @@ Tests/
 * scripts do not directly call SlapdTestCase.setUpClass() anymore
 * added LDIF test with folded, base64-encoded attribute
 * added more tests for sub-module ldap.dn
+* added tests for ldap.syncrepl (thanks to Karl Kornel)
 
 ----------------------------------------------------------------
 Released 2.5.1 2017-11-12
